--- a/supportjanasena/css/style.css
+++ b/supportjanasena/css/style.css
@@ -99,10 +99,7 @@ footer {
 
 /*Media Queries*/
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen
-and (min-width : 320px)
-and (max-width : 480px) {
-
+@media (min-width:320px) and (max-width:768px){
   /* Styles */
   body {
     overflow-x: hidden;
@@ -155,12 +152,12 @@ and (max-width : 480px) {
 }
 
 /*Tablets*/
-@media screen
+/*@media screen
 and (min-width : 768px)
 and (max-width : 1024px) {
 
   /* Styles */
-  header {
+  /*header {
     display: flex;
     justify-content: center;
     height: 120px;
@@ -208,10 +205,10 @@ and (max-width : 1024px) {
     justify-content:flex-start;
   }
 
-}
+}*/
 
 /*Desktops*/
-@media screen and (min-width : 1025px) {
+@media (min-width: 992px){
 
   /* Styles */
   body {
