--- a/supportjanasena/janasena-supporters-registration/css/default.css
+++ b/supportjanasena/janasena-supporters-registration/css/default.css
@@ -28,6 +28,15 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
   background: url('../../img/jenasena_logo.png') 50% 50% no-repeat rgb(249,249,249);
   animation:move 3s infinite ease-in-out;
 }
+@keyframes move{
+  0%{
+    transform: scale(1) rotate(0deg);
+  }
+  100%{
+    transform: scale(2) rotate(0.1deg);
+
+  }
+}
 body {
 	font-family: 'Lato', Calibri, Arial, sans-serif;
 	font-weight: 300;
